--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "jade": "~1.11.0",
     "mongoose": "^5.3.1",
     "morgan": "~1.9.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
